--- a/assets/css/main-style.css
+++ b/assets/css/main-style.css
@@ -46,6 +46,9 @@ dfn {
   font-style: italic;
 }
 
+
+.button--smallest{height:19px;line-height:17px;padding:0 10px;font-size:15px}
+
 h1 {
   font-size: 2em;
   margin: .67em 0;
